<resources>
    <string name="app_name">Bear Minimum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_auth_picker">AuthPicker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_network">No internet connection</string>
    <string name="unknown_error">An unknown error occured</string>
    <string name="invalid_profile_changes">information not correct</string>
    <string name="fail_image_load">failed to load image</string>
    <string name="button_signout">signout</string>
    <string name="button_apply_changes">apply changes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">unRead</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="collection">collection</string>
    <string name="borrowed">borrowed</string>
    <string name="nav_profile">profile</string>
    <string name="nav_incoming_requests">incoming requests</string>
    <string name="nav_outgoing_requests">outgoing requests</string>
    <string name="nav_add_book">add book</string>
    <string name="nav_search">search</string>
    <string name="nav_notifications">notifications</string>
    <string name="nav_sign_out">sign out</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="username">username</string>
    <string name="check">check</string>
    <string name="enter_your_search">enter your search</string>
    <string name="title">title</string>
    <string name="status">status</string>
    <string name="description">description</string>
    <string name="insert">insert</string>
    <string name="author">author</string>
    <string name="book">book</string>
    <string name="isbn">ISBN</string>
    <string name="books_with_requests">books with requests</string>
    <string name="request_book">request book</string>
    <string name="withdraw_request">withdraw request</string>
    <string name="request_channel_id">request channel</string>
    <string name="google_maps_key" />

</resources>